[gd_scene load_steps=7 format=3 uid="uid://dksxc3rs20kkc"]

[ext_resource type="Script" uid="uid://cq4wjdh73nd7s" path="res://Scenes/PlaysUIContainer/plays_ui_container.gd" id="1_58jbj"]
[ext_resource type="PackedScene" uid="uid://b4bws0qofhe6x" path="res://Scenes/PlaysUIContainer/PlayUI/plays_ui.tscn" id="1_lkkpg"]
[ext_resource type="PackedScene" uid="uid://d3d6ph6ugh14g" path="res://Scenes/PlaysUIContainer/DamageIndicator/damage_indicator.tscn" id="3_yny4v"]
[ext_resource type="FontFile" uid="uid://cvfib27cf5q88" path="res://Autoloads/Resources/Fonts/Go Banana.ttf" id="4_pxnfs"]
[ext_resource type="Script" uid="uid://bca8urfgsjynv" path="res://Scenes/Healthbar/parallelogram.gd" id="4_tepdj"]
[ext_resource type="PackedScene" uid="uid://brba6p5e5xokk" path="res://Scenes/PlaysUIContainer/BoostUI/boost_ui.tscn" id="4_yny4v"]

[node name="PlaysUIContainer" type="Control" groups=["plays_ui_container"]]
custom_minimum_size = Vector2(1250, 704)
layout_mode = 3
anchors_preset = 0
offset_right = 1250.0
offset_bottom = 704.0
scale = Vector2(0.45, 0.45)
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_58jbj")

[node name="MainContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(1250, 700)
layout_mode = 0
offset_right = 1250.0
offset_bottom = 704.0
theme_override_constants/separation = 8

[node name="MainUpperContainerContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 0
alignment = 1

[node name="MainUpperContainer" type="HBoxContainer" parent="MainContainer/MainUpperContainerContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = -104
alignment = 1

[node name="MainPlaysContainer" type="VBoxContainer" parent="MainContainer/MainUpperContainerContainer/MainUpperContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 9

[node name="PlayOneContainer" type="HBoxContainer" parent="MainContainer/MainUpperContainerContainer/MainUpperContainer/MainPlaysContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PlaysUIOne" parent="MainContainer/MainUpperContainerContainer/MainUpperContainer/MainPlaysContainer/PlayOneContainer" instance=ExtResource("1_lkkpg")]
unique_name_in_owner = true
layout_mode = 2

[node name="Spacer" type="Control" parent="MainContainer/MainUpperContainerContainer/MainUpperContainer/MainPlaysContainer/PlayOneContainer"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2

[node name="Spacer2" type="Control" parent="MainContainer/MainUpperContainerContainer/MainUpperContainer/MainPlaysContainer/PlayOneContainer"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2

[node name="PlayTwoContainer" type="HBoxContainer" parent="MainContainer/MainUpperContainerContainer/MainUpperContainer/MainPlaysContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Spacer" type="Control" parent="MainContainer/MainUpperContainerContainer/MainUpperContainer/MainPlaysContainer/PlayTwoContainer"]
custom_minimum_size = Vector2(38, 0)
layout_mode = 2

[node name="PlaysUITwo" parent="MainContainer/MainUpperContainerContainer/MainUpperContainer/MainPlaysContainer/PlayTwoContainer" instance=ExtResource("1_lkkpg")]
unique_name_in_owner = true
layout_mode = 2

[node name="Spacer2" type="Control" parent="MainContainer/MainUpperContainerContainer/MainUpperContainer/MainPlaysContainer/PlayTwoContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="PlayThreeContainer" type="HBoxContainer" parent="MainContainer/MainUpperContainerContainer/MainUpperContainer/MainPlaysContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Spacer" type="Control" parent="MainContainer/MainUpperContainerContainer/MainUpperContainer/MainPlaysContainer/PlayThreeContainer"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2

[node name="Spacer2" type="Control" parent="MainContainer/MainUpperContainerContainer/MainUpperContainer/MainPlaysContainer/PlayThreeContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="PlaysUIThree" parent="MainContainer/MainUpperContainerContainer/MainUpperContainer/MainPlaysContainer/PlayThreeContainer" instance=ExtResource("1_lkkpg")]
unique_name_in_owner = true
layout_mode = 2

[node name="DamageSideContainer" type="VBoxContainer" parent="MainContainer/MainUpperContainerContainer/MainUpperContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(510, 446)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 9

[node name="DamagePreviewContainer" type="HBoxContainer" parent="MainContainer/MainUpperContainerContainer/MainUpperContainer/DamageSideContainer"]
custom_minimum_size = Vector2(459, 292)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/separation = 0

[node name="DamageIndicator" parent="MainContainer/MainUpperContainerContainer/MainUpperContainer/DamageSideContainer/DamagePreviewContainer" instance=ExtResource("3_yny4v")]
unique_name_in_owner = true
layout_mode = 2

[node name="Spacer" type="Control" parent="MainContainer/MainUpperContainerContainer/MainUpperContainer/DamageSideContainer/DamagePreviewContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="BoostIndicatorContainer" type="HBoxContainer" parent="MainContainer/MainUpperContainerContainer/MainUpperContainer/DamageSideContainer"]
custom_minimum_size = Vector2(459, 145)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Spacer" type="Control" parent="MainContainer/MainUpperContainerContainer/MainUpperContainer/DamageSideContainer/BoostIndicatorContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2

[node name="BoostUI" parent="MainContainer/MainUpperContainerContainer/MainUpperContainer/DamageSideContainer/BoostIndicatorContainer" instance=ExtResource("4_yny4v")]
unique_name_in_owner = true
layout_mode = 2

[node name="CheeseSpacer" type="Control" parent="MainContainer/MainUpperContainerContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(56, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="TraitContainer" type="HBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 3

[node name="Spacer" type="Control" parent="MainContainer/TraitContainer"]
custom_minimum_size = Vector2(109, 250)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/TraitContainer"]
custom_minimum_size = Vector2(255, 80)
layout_mode = 2
size_flags_horizontal = 3

[node name="BackgroundPara" type="Polygon2D" parent="MainContainer/TraitContainer/MarginContainer"]
unique_name_in_owner = true
position = Vector2(115.8889, 0)
color = Color(0.8352941, 0.87058824, 0.85882354, 1)
polygon = PackedVector2Array(-59, 250, -117, 0, 965, 0, 1023, 250)
script = ExtResource("4_tepdj")

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/TraitContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Spacer" type="Control" parent="MainContainer/TraitContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 250)
layout_mode = 2
size_flags_horizontal = 0
metadata/_edit_lock_ = true

[node name="MarginContainer2" type="MarginContainer" parent="MainContainer/TraitContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
metadata/_edit_lock_ = true

[node name="TraitLabel" type="RichTextLabel" parent="MainContainer/TraitContainer/MarginContainer/HBoxContainer/MarginContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1079, 250)
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_constants/line_separation = -12
theme_override_constants/paragraph_separation = -12
theme_override_constants/outline_size = 0
theme_override_constants/underline_alpha = 255
theme_override_fonts/normal_font = ExtResource("4_pxnfs")
theme_override_font_sizes/normal_font_size = 78
bbcode_enabled = true
text = "Trait : Like to ball"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="MainContainer/TraitContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 250)
layout_mode = 2
size_flags_horizontal = 0
metadata/_edit_lock_ = true
